# plenoptic-cam-processing-lib

./: CMakeLists.txt  LICENCE  README.md  dependencies.txt
examples/config/: camera.js  images.js  intrinsics.js  params.js  poses.js
examples/obs/: bap-R12-A.csv  center-R12-A.csv
pleno/: types.h  unused.h  version.h
pleno/geometry/: disk.h  distortions.cpp  internals.cpp  mesh.cpp  mesh.h  mia.cpp  mia.h  observation.cpp  observation.h  plane.cpp  pose.cpp  pose.h  ray.cpp  ray.h  reprojection.h  rgba.cpp  rgba.h  sampler.h  sensor.h  transformation.cpp  transformation.h
pleno/geometry/camera/: camera.cpp  camera.h  orthographic.h  pinhole.cpp  plenoptic.cpp  plenoptic.h  thinlens.cpp  thinlens.h
pleno/geometry/depth/: depthimage.cpp  depthimage.h  depthmap.cpp  depthmap.h  pointcloud.cpp
pleno/geometry/model/: microimage.cpp  microimage.h
pleno/geometry/object/: plate.h
pleno/graphic/: colormap.cpp  colormap.h  display.h  draw.cpp  viewer_2d.cpp  viewer_2d.h  viewer_3d.cpp  viewer_3d.h
pleno/io/: archive.h  choice.h  depths.cpp  images.cpp  printer.cpp  printer.h
pleno/io/cfg/: camera.h  depths.h  functions.h  images.h  mia.h  sensor.h
pleno/optimization/: depth.h  distortions.cpp  focal.cpp  functions.cpp  functions.h  homography.cpp  homography.h  kappa.cpp  mia.cpp  mla.h  pose2d.cpp  pose3d.cpp  sensor.cpp  thinlens.h
pleno/optimization/errors/: bap.h  blur.cpp  blur.h  disparity.cpp  extrinsics.cpp  invdistortion.cpp  lidarcamera.cpp  lidarcamera.h  radius.cpp  radius.h  scaling.cpp
pleno/processing/: estimation.cpp  estimation.h
pleno/processing/algorithms/: dbscan.h  dbscan.hpp  p3p.cpp
pleno/processing/calibration/: blur.cpp  calibration.h  evaluate.h  extrinsics.cpp  init.h  lidarcamera.cpp  link.h  mia.cpp  plenoptic.cpp  scaling.cpp
pleno/processing/depth/: compute.cpp  compute.h  depth.cpp  depth.h  filter.cpp  filter.h  initialization.cpp  initialization.h  neighbors.cpp  neighbors.h  pairing.h  search.cpp  search.h  strategy.cpp  strategy.h
pleno/processing/detection/: bapfeatures.cpp  bapfeatures.hpp  mic.cpp
pleno/processing/detection/corners/: caracterize.cpp  caracterize.h  clusterize.cpp  corners.cpp
pleno/processing/imgproc/: devignetting.cpp  devignetting.h  interp.cpp  interp.h  quality.cpp  trim.cpp
pleno/processing/precalibration/: display.cpp  display.h  export.h  preprocess.cpp  preprocess.h
pleno/processing/tools/: chrono.h  maths.h  matrix.h  range.h  stats.h  vector.h
pleno/simulation/generate/: generate.h  image.cpp
third_parties/libv/: CMakeLists.txt  COPYING.LESSER  README.txt
third_parties/libv/core/: CMakeLists.txt  package.xml
third_parties/libv/core/src/: build.dox  style.dox  whitespace.dox
third_parties/libv/core/src/concepts/stl/: containers.dox  iterators.dox  utilities.dox
third_parties/libv/core/src/libv/core/: auto_load.cpp  auto_load.hpp  console.hpp  cstdint.hpp  draw_tools.hpp  logger.cpp  logger.hpp  macros.hpp  miscmath.hpp  noncopyable.hpp  path.hpp  print.hpp  properties.hpp  rwlock.cpp  rwlock.hpp  test.hpp  time.hpp
third_parties/libv/core/src/libv/core/algorithm/: filter_indexes.hpp  (+1 more)
third_parties/libv/core/tests/: config.cpp  config.ini  rwlock.cpp
third_parties/libv/core/tests/image/: concepts.cpp
third_parties/libv/geometry/: CMakeLists.txt  package.xml
third_parties/libv/geometry/examples/calibrate_camera/src/: main.cpp
third_parties/libv/geometry/src/libv/geometry/: camera_model.cpp  camera_model.hpp  cubic_spline.hpp  drummond.cpp  drummond.hpp  edge_triangulation.hpp  epipolar_distance.cpp  global.hpp  io.hpp  numerical_diff.hpp  p3p.cpp  plane_equation.hpp  pose.cpp  pose.hpp  ray.hpp  ros.hpp  rotation.cpp  rotation.hpp  triangulation.cpp  triangulation.hpp
third_parties/libv/geometry/tests/: UnifiedCameraModel.cpp  plane_equation.cpp  rotation.cpp  rotation_mean.cpp
third_parties/libv/geometry/tests/euler_angles/: euler_angles.cpp
third_parties/libv/graphic/: package.xml  rviz.xml
third_parties/libv/graphic/examples/draw_random_3d/: CMakeLists.txt
third_parties/libv/graphic/examples/draw_random_3d/src/: main.cpp
third_parties/libv/graphic/examples/draw_random_shapes/src/: main.cpp
third_parties/libv/graphic/examples/play_video/: CMakeLists.txt
third_parties/libv/graphic/examples/play_video/src/: main.cpp
third_parties/libv/graphic/src/libv/graphic/: colors.cpp  global.cpp  palette.hpp  types.hpp  viewer.cpp  viewer.hpp  viewer.ui  viewer_context.cpp  viewer_context.hpp
third_parties/libv/graphic/src/private/: TopicDisplay.cpp  TopicDisplay.hpp  rviz_display_FourWheelSteering.hpp  rviz_display_Twist.hpp  twist.mac
third_parties/lma/: README.md
third_parties/lma/examples/animate_sphere/: CMakeLists.txt
third_parties/lma/examples/animate_sphere/src/: main.cpp
third_parties/lma/examples/bal/src/: bal.cpp
third_parties/lma/examples/circle/src/: circle.cpp
third_parties/lma/examples/convert_camera_model/src/: main.cpp  pinhole_indirect_radial.cpp  unified.cpp
third_parties/lma/examples/dependencies_graph/src/: dependencies_graph.cpp
third_parties/lma/examples/derivatives/: CMakeLists.txt
third_parties/lma/examples/derivatives/src/: derivatives.cpp
third_parties/lma/examples/libv-ba/: CMakeLists.txt
third_parties/lma/examples/libv-ba/src/: libv-ba.cpp
third_parties/lma/examples/rosenbrock/: CMakeLists.txt
third_parties/lma/examples/rosenbrock/src/: main.cpp
third_parties/lma/examples/sphere/: CMakeLists.txt
third_parties/lma/src/libv/lma/: global.hpp  lma.hpp
third_parties/lma/src/libv/lma/graph/: functors_container.hpp  graph.hpp
third_parties/lma/src/libv/lma/string/: display.hpp
third_parties/lma/src/libv/lma/time/: tictoc.hpp
third_parties/lma/tests/: ad.cpp  adct.cpp  all_solver.cpp  all_solver2.cpp  bal.cpp  blaze.cpp  compression_storage.cpp  container2.cpp  derivatives.cpp  doublon.cpp  extract_hessian.cpp  functor_dispatch.cpp  mestimator.cpp  meta_prod2.cpp  pcg.cpp  rename.cpp  simple3.cpp  simple32.cpp  ttt.cpp  use_toon.cpp
tools.in/: Doxyfile.in  UseDoxygen.cmake  libplenoConfig.cmake.in
(+114 files in other folders)
